# llm

./: .env.example  .gitignore  README.md  eval_keywords_gemma4.txt  eval_keywords_mlx-gemma4.txt  eval_keywords_mlx-qwen3.txt  eval_keywords_qwen3.txt  eval_raw.json  eval_raw2.json  eval_results.json  eval_sentiment_gemma4.txt  eval_sentiment_mlx-gemma4.txt  eval_sentiment_mlx-qwen3.txt  eval_sentiment_qwen3.txt  eval_summary_gemma4.txt  eval_summary_mlx-gemma4.txt  eval_summary_mlx-qwen3.txt  eval_summary_qwen3.txt  final_keywords_mlx-gemma4.txt  final_keywords_mlx-qwen3.txt  final_sentiment_mlx-gemma4.txt  final_sentiment_mlx-qwen3.txt  final_summary_mlx-gemma4.txt  final_summary_mlx-qwen3.txt  fix_env.py  pyproject.toml  qwen3_summary.txt  qwen3_test.txt  test_codex.py  test_codex_gemini.py  test_llm_cli.py  test_llm_cli_gemini.py  test_mlx.py  test_server_smart_routing.py  test_smart_routing.py
.github/workflows/: update-stats.yml
llm/: __init__.py  client.py  routing.py
llm/analytics/: amplitude.py
llm/providers/: __init__.py  codex.py  gemini.py  mlx.py
