[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm"
version = "0.1.0"
description = "Unified LLM client: Gemini (key rotation) + Codex-API-Server, with Amplitude analytics"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    "amplitude-analytics>=1.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["llm"]
